# ungula-sd

./: API.md  README.md  library.properties
src/: ungula_sd.h
src/sd/: i_file.h  i_filesystem.h
src/sd/platform/esp/: esp_sd_base_filesystem.cpp  esp_sd_base_filesystem.h  esp_sd_config.h  esp_sd_file.h  esp_sd_filesystem.cpp  esp_sd_filesystem.h  esp_sdmmc_config.h  esp_sdmmc_filesystem.cpp  esp_sdmmc_filesystem.h
src/ungula/: sd.h
src/ungula/sd/: i_file.h  i_filesystem.h
src/ungula/sd/platform/esp/: esp_sd_base_filesystem.cpp  esp_sd_base_filesystem.h  esp_sd_config.h  esp_sd_file.h  esp_sd_filesystem.cpp  esp_sd_filesystem.h  esp_sdmmc_config.h  esp_sdmmc_filesystem.cpp  esp_sdmmc_filesystem.h
tests/: CMakeLists.txt  test_sd.cpp
tests/ArduinoStub/: system_stub.cpp
